--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -19,7 +19,7 @@
 	<DebugType>full</DebugType>
 	<Optimize>false</Optimize>
 	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_5_2_1;UNITY_5_2;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_REFLECTION_BUFFERS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;UNITY_STANDALONE_OSX;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_GAMECENTER;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_LOG_MIXED_STACKTRACE;ENABLE_UNITYWEBREQUEST;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX</DefineConstants>
+	<DefineConstants>DEBUG;TRACE;UNITY_5_2_1;UNITY_5_2;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_REFLECTION_BUFFERS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;UNITY_IPHONE;ENABLE_RUNTIME_GI;ENABLE_SUBSTANCE;ENABLE_GAMECENTER;ENABLE_NETWORK;UNITY_IPHONE_API;UNITY_IOS;ENABLE_TEXTUREID_MAP;PLAYERCONNECTION_LISTENS_FIXED_PORT;DEBUGGER_LISTENS_FIXED_PORT;ENABLE_UNITYADS_RUNTIME;UNITY_UNITYADS_API;ENABLE_IL2CPP;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX;ENABLE_IOS_ON_DEMAND_RESOURCES;ENABLE_IOS_APP_SLICING</DefineConstants>
 	<ErrorReport>prompt</ErrorReport>
 	<WarningLevel>4</WarningLevel>
 	<NoWarn>0169</NoWarn>
@@ -46,35 +46,35 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Increment.cs" />
+     <Compile Include="Assets\Scripts\FloorControl\FloorControl_Distant.cs" />
+     <Compile Include="Assets\Scripts\FloorControl\FloorControl_Distant_alt.cs" />
+     <Compile Include="Assets\Scripts\FloorControl\FloorControl_Distant_alt2.cs" />
+     <Compile Include="Assets\Scripts\FloorControl\FloorControl_Ground.cs" />
+     <Compile Include="Assets\Scripts\FloorControl\FloorControl_Near.cs" />
      <Compile Include="Assets\Scripts\Main\AtkButton.cs" />
      <Compile Include="Assets\Scripts\Main\BattleManager.cs" />
-     <Compile Include="Assets\Scripts\Main\ClearText.cs" />
      <Compile Include="Assets\Scripts\Main\EnemyBuild.cs" />
      <Compile Include="Assets\Scripts\Main\EnemyControl.cs" />
      <Compile Include="Assets\Scripts\Main\EnemyDestroy.cs" />
      <Compile Include="Assets\Scripts\Main\FadeManager.cs" />
-     <Compile Include="Assets\Scripts\Main\FloorControl_Distant.cs" />
-     <Compile Include="Assets\Scripts\Main\FloorControl_Distant_alt.cs" />
-     <Compile Include="Assets\Scripts\Main\FloorControl_Distant_alt2.cs" />
-     <Compile Include="Assets\Scripts\Main\FloorControl_Ground.cs" />
-     <Compile Include="Assets\Scripts\Main\FloorControl_Near.cs" />
-     <Compile Include="Assets\Scripts\Main\Pauser.cs" />
      <Compile Include="Assets\Scripts\Main\PlayerControl.cs" />
      <Compile Include="Assets\Scripts\Main\StageBuild.cs" />
      <Compile Include="Assets\Scripts\Main\StageCameraCtrl.cs" />
      <Compile Include="Assets\Scripts\Main\StageControl.cs" />
+     <Compile Include="Assets\Scripts\Main\StageEnabled.cs" />
      <Compile Include="Assets\Scripts\Main\StageManagerColl.cs" />
      <Compile Include="Assets\Scripts\Pause\Encounter.cs" />
      <Compile Include="Assets\Scripts\Pause\OnPushPause.cs" />
      <Compile Include="Assets\Scripts\Pause\OnPushQuit.cs" />
      <Compile Include="Assets\Scripts\Pause\OnPushReturn.cs" />
      <Compile Include="Assets\Scripts\Pause\PauseMenuCanvas.cs" />
+     <Compile Include="Assets\Scripts\Pause\Pauser.cs" />
      <Compile Include="Assets\Scripts\SceneTransition\ToSelect.cs" />
      <Compile Include="Assets\Scripts\SceneTransition\ToSkill.cs" />
      <Compile Include="Assets\Scripts\SceneTransition\ToStatus.cs" />
-     <Compile Include="Assets\Scripts\SelectButton.cs" />
      <Compile Include="Assets\Scripts\SingletonMonoBehaviour.cs" />
-     <Compile Include="Assets\StageEnabled.cs" />
+     <Compile Include="Assets\Scripts\UI\ClearText.cs" />
+     <Compile Include="Assets\Scripts\UI\SelectButton.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
